--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 blinker==1.9.0
 click==8.1.8
 Flask==3.1.0
@@ -9,6 +10,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 packaging==24.2
+psycopg2-binary==2.9.10
 python-dotenv==1.1.0
 SQLAlchemy==2.0.40
 typing_extensions==4.13.1
