--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
+alembic==1.15.2
 altgraph==0.17.4
 blinker==1.9.0
 click==8.1.8
 Flask==3.1.0
 Flask-Login==0.6.3
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 gunicorn==23.0.0
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.9
 MarkupSafe==3.0.2
 packaging==24.2
 psycopg2-binary==2.9.10
