--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==3.1.0
 Flask-Login==0.6.3
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
 gunicorn==23.0.0
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
@@ -18,4 +19,5 @@ python-dotenv==1.1.0
 SQLAlchemy==2.0.40
 typing_extensions==4.13.1
 Werkzeug==3.1.3
+WTForms==3.2.1
 zipp==3.21.0
